# tiniego-generate-3d

./: .dockerignore  .gitignore  Dockerfile  README.cloudrun.md  api.py  cloudbuild.yaml  generate_3d_file.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy-to-prod.yaml
app/: app.py  main.py
app/core/: __init__.py  config.py  http.py  middleware.py  validation.py
app/services/: __init__.py  supabase_service.py  tencent_ai3d.py
